# mini-llm-council

./: .gitignore  README.md  pyproject.toml  start.sh
backend/: config.py  main.py
backend/agent/: core.py  tab_pool.py  test_agent.py
backend/core/: orchestrator.py  rate_limiter.py  research_graph.py
backend/models/: schemas.py
backend/services/: bitnet_node.py  fallback_router.py  file_node.py  gemini.py  groq.py  llm_factory.py  metrics.py  ollama.py  openrouter.py  rag.py  search_node.py  web_agent_adapter.py
frontend/: index.html  package-lock.json  tailwind.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ChallengeModal.tsx  FallbackNotification.tsx  FallbackPromptModal.tsx  HistorySidebar.tsx  SettingsModal.tsx  ThemeToggle.tsx
frontend/src/components/chat/: ChatMessage.tsx  ChatView.tsx
frontend/src/components/council/: CouncilHeader.tsx  CouncilMemberCard.tsx  CouncilSeats.tsx  DebateCard.tsx  DecreeCard.tsx  DraftApprovalModal.tsx  PromptInput.tsx  StatusIndicator.tsx
frontend/src/components/research/: ResearchPanel.tsx  index.ts
frontend/src/components/settings/: BitNetStatus.tsx  SystemMetrics.tsx  index.ts
frontend/src/components/ui/: hover-card.tsx
frontend/src/contexts/: ConversationContext.tsx
frontend/src/hooks/: use-council.ts
frontend/src/lib/: council-engine.ts  demo-engine.ts  storage.ts
frontend/src/pages/: Index.tsx  Research.tsx
frontend/src/types/: council.ts
scripts/: bitnet_manager.py  test_markitdown.py  test_research.py
